--- a/client/DocumentViewer/DocumentViewer/Base.lproj/Main.storyboard
+++ b/client/DocumentViewer/DocumentViewer/Base.lproj/Main.storyboard
@@ -96,11 +96,96 @@
                     <navigationItem key="navigationItem" title="Documents" id="OUE-m2-UxN"/>
                     <connections>
                         <outlet property="docTableView" destination="YSW-cG-V3y" id="fMY-Jw-NAi"/>
+                        <segue destination="6jy-O8-ku0" kind="show" identifier="segueToDetail" id="Ui6-od-92s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="972" y="33.733133433283363"/>
+        </scene>
+        <!--Document DetailVC-->
+        <scene sceneID="xLQ-If-QtZ">
+            <objects>
+                <viewController id="6jy-O8-ku0" customClass="DocumentDetailVC" customModule="DocumentViewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="E0f-pH-mJT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="m7v-x3-HjK"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lvM-9W-JxZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1753" y="40"/>
+        </scene>
+        <!--Image ViewerVC-->
+        <scene sceneID="7Uh-XZ-to0">
+            <objects>
+                <viewController storyboardIdentifier="imageVC" id="CeJ-gj-For" customClass="ImageViewerVC" customModule="DocumentViewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KKl-rV-BlJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6JN-Bs-Ums">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sZ9-Wb-g9n" firstAttribute="trailing" secondItem="6JN-Bs-Ums" secondAttribute="trailing" id="Qea-8U-d8J"/>
+                            <constraint firstItem="6JN-Bs-Ums" firstAttribute="top" secondItem="sZ9-Wb-g9n" secondAttribute="top" id="QfX-Le-2Po"/>
+                            <constraint firstItem="sZ9-Wb-g9n" firstAttribute="bottom" secondItem="6JN-Bs-Ums" secondAttribute="bottom" id="XWB-rD-zhz"/>
+                            <constraint firstItem="6JN-Bs-Ums" firstAttribute="leading" secondItem="sZ9-Wb-g9n" secondAttribute="leading" id="a0U-h0-Sjv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="sZ9-Wb-g9n"/>
+                    </view>
+                    <connections>
+                        <outlet property="docImage" destination="6JN-Bs-Ums" id="sSw-7t-kVf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u6Z-99-r4t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2530" y="300"/>
+        </scene>
+        <!--ViewerVC-->
+        <scene sceneID="j2u-nM-Uo6">
+            <objects>
+                <viewController storyboardIdentifier="pdfVC" id="kyM-xe-ilx" customClass="PDFViewerVC" customModule="DocumentViewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="n2X-C0-cFR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="No2-bI-7b3">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="q2H-aT-mxI">
+                                <rect key="frame" x="177" y="323" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="No2-bI-7b3" firstAttribute="top" secondItem="gsV-cR-08e" secondAttribute="top" id="8i8-iP-gKP"/>
+                            <constraint firstItem="q2H-aT-mxI" firstAttribute="centerY" secondItem="n2X-C0-cFR" secondAttribute="centerY" id="HsU-ci-BxS"/>
+                            <constraint firstItem="gsV-cR-08e" firstAttribute="trailing" secondItem="No2-bI-7b3" secondAttribute="trailing" id="MYG-3H-Lzr"/>
+                            <constraint firstItem="No2-bI-7b3" firstAttribute="leading" secondItem="gsV-cR-08e" secondAttribute="leading" id="UCF-Cp-3P1"/>
+                            <constraint firstItem="gsV-cR-08e" firstAttribute="bottom" secondItem="No2-bI-7b3" secondAttribute="bottom" id="nr3-NK-iiT"/>
+                            <constraint firstItem="q2H-aT-mxI" firstAttribute="centerX" secondItem="n2X-C0-cFR" secondAttribute="centerX" id="s7B-hc-DA8"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gsV-cR-08e"/>
+                    </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="q2H-aT-mxI" id="56f-Xi-qg1"/>
+                        <outlet property="pdfWebView" destination="No2-bI-7b3" id="X2K-PP-DTp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="voM-ka-0Ox" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2534" y="-385"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="p4N-Ls-iST">
